--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,2 +1,16 @@
-// @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
+@import 'reset';
+
+$blue: #1b273d;
+$gold: #ffb600;
+
+body, html {
+    height: 100%;
+}
+
+
+@import 'welcome';
+@import 'menu';
+@import 'slider';
+@import 'index';
