--- a/resources/assets/sass/_slider.scss
+++ b/resources/assets/sass/_slider.scss
@@ -89,6 +89,52 @@
     
 }
 
+.project-images {
+    display: flex;
+    flex-direction: column;
+    // transition:position 1s ease;
+    > * {
+        margin-bottom: 25px;
+    }
+    
+    > div:last-of-type {
+        margin-bottom: 0;
+    }
+    
+    &.right {
+        position: absolute;
+        right: 99999999px;
+    }
+    
+    &.left {
+        position: absolute;
+        right: -99999999px;
+    }
+    
+}
+
+.small-controls {
+    width: 80%;
+    margin: 0 auto 20px;
+    display: flex;
+    flex-direction: row-reverse;
+    div {
+        width: 130px;
+        color: $gold;
+        font-size: 1.9em;
+        box-sizing: border-box;
+        padding: 20px 15px;
+        border: 2px solid $gold;
+        box-shadow: inset -4px -1px 41px 1px #a1a2ad;
+        display: flex;
+        justify-content: space-around;
+        > * {
+            cursor: pointer;
+        }
+        
+    }
+}
+
 
 
 @media screen and (min-width:768px) {
@@ -101,6 +147,17 @@
     }
     .controls {
         font-size: 2.5em;
+    }
+    
+    .project-images {
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content : space-around;
+            > * {
+                width: 40%;
+                margin-bottom: 55px;
+                max-height: 300px;
+            }
     }
     
 }
