index page implemented

--- a/resources/assets/sass/_index.scss
+++ b/resources/assets/sass/_index.scss
@@ -64,6 +64,7 @@
     background-color: $gold;
     color: $blue;
     margin-top: 25px;
+    cursor: pointer;
     &:hover {
         background-color: red;
         color: $gold;
