--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -9,8 +9,9 @@ body, html {
     height: 100%;
 }
 
-
 @import 'welcome';
 @import 'menu';
-@import 'slider';
 @import 'index';
+@import 'footer';
+@import 'slider';
+
