--- a/resources/assets/sass/_menu.scss
+++ b/resources/assets/sass/_menu.scss
@@ -104,6 +104,10 @@ nav {
     }
 }
 
+.contact span:nth-of-type(2n) {
+    margin-left: 5px;
+}
+
 @media screen and (min-width: 768px) {
     .menu-container {
         justify-content: center;
